
Controller 2.1.0 (2014-XX-XX Twin Galaxies)
===========================================

New Features:

  - EnOcean Implementation (Rainer Hitz, ORCJAVA-348)
  - Mi Casa Verde Vera Integration (Marcus Redeker, ORCJAVA-330, ORCJAVA-331)
  - Round robind database (RRD) integration for storing sensor
    data (Marcus Redeker, ORCJAVA-353, ORCJAVA-356)
  - EmonCMS integration for storing sensor data (Marcus Redeker, ORCJAVA-357)
  - WebConsole upgraded to version 2.1.2, fixes issues with stuck
    loading screen, label on/off states with switch sensors, and tweaks for
    Midori web browser (Richard Turner, WEBCONSOLE-57, WEBCONSOLE-59, 
    ORCJAVA-345, ORCJAVA-379)
  - Added DSC Security System (IT-100/EnvisaLink) integration - IP to serial 
    (Greg Rapp, Phil Taylor, ORCJAVA-302)
  - Lagarto server (panStamps) integration (Daniel Berenguer)
  - Support 'custom' sensor types with virtual commands (ORCJAVA-217)

  - KNX: 
     * Added distinct levels for 'DIM' and 'SCALE' commands that allow
       set values to be configured for buttons, e.g. 'DIM 50' to dim directly
       to 50% (Eric Bariaux, ORCJAVA-71). 
     * Added DPT 6.001 and DPT 6.010 signed 8-bit value support 
       (Stefan Langerman, ORCJAVA-361). 
     * Added support for date datatype (DPT 10.xxx), time datatype (DPT 11.xxx), 
       four-octet signed values (DPT 13.xxx) and four octet float 
       values (DPT 14.xxx). Corresponding commands that have been added are 
       'DATE', 'TIME', 'ENERGY' and 'POWER' (Kenneth Stridh, ORCJAVA-362).
     * Support for DPT 232.600 (RGB values) and DPT 16.001 (text fields) added, 
       implementation converted internally to EventListener API (Marcus Redeker, 
       ORCJAVA-291, ORCJAVA-294, ORCJAVA-301)

  - HTTP protocol: 
     * Methods GET, POST, PUT and DELETE are now supported, HTTP 100 Expect
       Continue headers have been set to false for compatibility with HTTP 
       servers that don't support this header (Marcus Redeker, ORCJAVA-400,